# martijn-cli

./: AGENTS.md  Cargo.toml  README.md
src/: cli.rs  config.rs  interactive.rs  main.rs
src/azure/: mod.rs  model.rs  report.rs  service.rs  snapshot.rs
src/azure/templates/: inventory.md.tera  inventory.resource.list.md.tera  inventory.resource.tree.md.tera
src/commands/: dummy.rs  mod.rs
src/commands/azure/: cli.rs  inventory.rs  login.rs  mod.rs  snapshot.rs  state.rs
src/shells/: azure.rs  dummy.rs  engine.rs  mod.rs  root.rs
src/shells/azure/: commands.rs  inventory.rs  login.rs  mod.rs  snapshot.rs  state.rs
