[package]
name = "martijn"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
figlet-rs = "0.1.5"
owo-colors = "4.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tera = "1.20.0"
time = { version = "0.3", features = ["formatting", "macros"] }
tokio = { version = "1.47.1", features = ["macros", "process", "rt-multi-thread"] }
toml = "0.9.5"
uuid = { version = "1", features = ["v4"] }
